--- a/python gui/4_icone.ipynb
+++ b/python gui/4_icone.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "\n",
     "main=Tk()\n",
-    "main.title(\"Sr.Monter\")\n",
+    "main.title(\"ICON-Sr.Monter\")\n",
     "main.geometry(\"500x500+600+200\")\n",
     "main.minsize(width=500,height=500)\n",
     "main.state(\"zoomed\")\n",
