--- a/python gui/7_label_size_type.ipynb
+++ b/python gui/7_label_size_type.ipynb
@@ -24,7 +24,7 @@
     "    menu.maxsize(width=750,height=500)\n",
     "    menu.resizable(False,True)\n",
     "    menu.iconbitmap(\"icon/IF.ico\")\n",
-    "    menu.title(\"Funcao Button\")\n",
+    "    menu.title(\"Funcao Label\")\n",
     "    menu['bg']='gray' #<< letras minusculas\n",
     "    comentario='Menu'\n",
     "    label1= Label(menu,text=comentario,font='Verdana 20 bold',bg='black',fg='gray',width=10,height=1)\n",
