--- a/python gui/9_espaco_button_label.ipynb
+++ b/python gui/9_espaco_button_label.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "main = Tk()\n",
     "main.iconbitmap(\"icon/IF.ico\")\n",
+    "main.title(\"Ajustando espaço.\")\n",
     "main.geometry(\"750x500+600+200\")\n",
     "main['bg']='black'\n",
     "main.resizable(False,False)\n",
