Atualizando Listas encadeadas

--- a/ListasEncadeadas/main.ipynb
+++ b/ListasEncadeadas/main.ipynb
@@ -9,7 +9,7 @@
     "class No:\n",
     "    def __init__(self,element):\n",
     "        self.value = element\n",
-    "        self.next  = None"
+    "        self.next = None"
    ]
   },
   {
@@ -20,17 +20,17 @@
    "source": [
     "class Lista:\n",
     "    def __init__(self):\n",
-    "        self.header = None\n",
+    "        self.head = None\n",
     "        self.cont = 0\n",
     "\n",
     "    def push(self,element): \n",
     "        node = No(element)\n",
-    "        current = self.header\n",
-    "        if self.header == None: \n",
-    "            self.header = node\n",
-    "            current = self.header\n",
+    "        current = self.head\n",
+    "        if self.head == None: \n",
+    "            self.head = node\n",
+    "            current = self.head\n",
     "        else:   \n",
-    "            current = self.header\n",
+    "            current = self.head\n",
     "            while current.next != None:\n",
     "                current = current.next    \n",
     "            current.next = node\n",
@@ -39,7 +39,7 @@
     "    def getElementAt(self,position):\n",
     "\n",
     "        if position >= 0 and position <= self.cont:\n",
-    "            node = self.header\n",
+    "            node = self.head\n",
     "            for x in range(position):\n",
     "                if node != None:\n",
     "                    node = node.next\n",
@@ -52,9 +52,9 @@
     "        if position >= 0:\n",
     "            node = No(element)\n",
     "            if position == 0:\n",
-    "                current = self.header\n",
+    "                current = self.head\n",
     "                node.next = current\n",
-    "                self.header = node\n",
+    "                self.head = node\n",
     "            else:\n",
     "                previous = self.getElementAt(position-1)\n",
     "                current = previous.next\n",
@@ -63,53 +63,78 @@
     "            self.cont+=1\n",
     "            return True\n",
     "        return False \n",
-    "    \n",
+    "\n",
+    "    def insert(self,element):\n",
+    "        node = No(element)\n",
+    "        if self.head == None:\n",
+    "            current = self.head\n",
+    "            node.next = current\n",
+    "            self.head = node\n",
+    "        else:\n",
+    "            current = self.head\n",
+    "            node.next = current\n",
+    "            self.head = node \n",
+    "        self.cont+=1\n",
+    "        return self.head\n",
+    "\n",
     "    def removeAt(self,position):\n",
     "        if int(position) > int(self.cont):\n",
     "            position = self.cont\n",
     "        if position >= 0:\n",
-    "            current = self.header\n",
+    "            current = self.head\n",
     "            if position == 0:\n",
-    "                self.header =self.header.next\n",
+    "                self.head =self.head.next\n",
     "            else:\n",
     "                previous = self.getElementAt(position-1)\n",
     "                current = previous.next\n",
     "                previous.next = current\n",
     "            self.cont-=1\n",
     "            return True\n",
-    "        return False"
+    "        return False\n",
+    "\n",
+    "    def remove(self):\n",
+    "        if self.head == None:\n",
+    "            pass\n",
+    "        else:\n",
+    "            self.head = self.head.next\n",
+    "        self.cont-=1\n",
+    "        \n",
+    "    def listing(self):\n",
+    "        current = self.head\n",
+    "        while current != None:\n",
+    "            print(current.value)\n",
+    "            current = current.next"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.No object at 0x7f2ea8755040> 1\n",
-      "\n",
-      "\n",
-      "<__main__.No object at 0x7f2ea8755370> 2\n",
-      "\n",
-      "\n",
-      "<__main__.No object at 0x7f2ea90b1160> 3\n",
-      "\n",
-      "\n",
-      "<__main__.No object at 0x7f2ea8755370> 1\n",
-      "\n",
-      "\n",
-      "<__main__.No object at 0x7f2ea90b1160> 2\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    lista = Lista()\n",
+    "    lista =Lista()\n",
+    "    lista.insert(15)\n",
+    "    lista.insert(16)\n",
+    "    lista.insert(17)\n",
+    "    lista.listing()\n",
+    "    print(lista.getElementAt(0),'1\\n\\n')\n",
+    "    print(lista.getElementAt(1),'2\\n\\n')\n",
+    "    print(lista.getElementAt(2),'3\\n\\n')\n",
+    "\n",
+    "    lista.remove()\n",
+    "    print(lista.getElementAt(0),'1\\n\\n')\n",
+    "    print(lista.getElementAt(1),'2\\n\\n')\n",
+    "    print(lista.getElementAt(2),'3\\n\\n') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''lista = Lista()\n",
     "    lista.push(15)\n",
     "    lista.push(14)\n",
     "    lista.push(13)\n",
@@ -120,9 +145,7 @@
     "    print(lista.getElementAt(3),'3\\n\\n')\n",
     "    lista.removeAt(0)\n",
     "    print(lista.getElementAt(1),'1\\n\\n')\n",
-    "    print(lista.getElementAt(2),'2\\n\\n')\n",
-    "\n",
-    " \n"
+    "    print(lista.getElementAt(2),'2\\n\\n')'''"
    ]
   }
  ],
